"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-08-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-54-prsim-07-04:
	  Added sim/prsim/Cause.h: for advanced cause tracking structures.
	  PRSIM_SEPARTE_CAUSE_NODE_DIRECTION still disabled in this snapshot.
		Much coded added to use it in Node/Event...
	  Minor switch added and enabled: PRSIM_ASSIGN_CAUSE_ON_DEQUEUE:
		instead of assigning cause on enqueue of event, 
		assign the cause after event actually happens, so unstable 
		events don't get mistakenly and prematurely assigned blame.  
		This causes no regressions.  
	  Next: resume cause-separation.  


	* HACKT-00-01-04-main-00-79-54-prsim-07-03:
	  prsim: added commands 'unstable' 'weak-unstable' 'interference'
		'weak-interference' which all take one of the arguments
		'ignore' 'warn' 'notify' (same as warn) 'break'.
		These commands control the simulation policy on the
		named violations.  
	  State.cc: corrected the default values of violation policies,
		reset() also resets the violation policies.  
		propagate the result of evaluation and flush_pending_queue
			to callers to conditionally set the STOP flag.  
	  A few test-cases updated to allow unstable behavior where intended.
	  TODO: backtracing events and value-specific causality.


	* HACKT-00-01-04-main-00-79-54-prsim-07-02:
	  prsim: devel-switch: PRSIM_FINE_GRAIN_ERROR_CONTROL added:
		be able to control whether or not diagnostic is printed
		and whether or not to break runs for each type of 
		violation {weak-,}{unstable,interference}.
		Current snapshot causes no regressions with/without switch.
	  TODO next: commands to alter behavior.


2006-08-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-54-prsim-07-01:
	  This branch is for another series of prsim improvements.  
	  Some plans are written in the TODO file.